--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 							Portfolio</h1>
 						<p>Data Analyst skilled in Python, SQL and  Power Bi <a href="https://github.com/riyaz-pattan">@Riyaz_Pattan</a></p>
 						
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						<a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a>
+
 					</div>
 
 				<!-- Header -->
