--- a/index.html
+++ b/index.html
@@ -166,6 +166,20 @@
 										<li><a href="https://github.com/riyaz-pattan/Bike-Sales-Dashboard" class="button">View project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/riyaz-pattan/Sales-Conversion-Analysis">Sales Conversion Rate<br />
+										Power BI</a></h2>
+									</header>
+									<a  class="image fit"><img src="Website_img\Sales-Conversion.jpg" alt="" /></a>
+									<p>This Project contains a Sales Performance Dashboard designed to provide insights into sales trends, 
+										profitability, and customer demographics. Using visualizations, KPIs, 
+										and interactive filters, the dashboard empowers stakeholders to make informed decisions for optimizing sales strategies.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/riyaz-pattan/Sales-Conversion-Analysis" class="button">View project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						
